-fix: remove duplicate alerts -fix: table overflow

--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1127,6 +1127,7 @@ div.user-profile-page {
 			font-weight: 600;
 			background-color: #0E74D2;
 			border-color: #0B62BA;
+			border-radius: 5px;
 
 			&:hover {
 				background-color: #0f6cc2;
