--- a/src/encoded/static/scss/encoded/modules/_viz.scss
+++ b/src/encoded/static/scss/encoded/modules/_viz.scss
@@ -680,40 +680,14 @@ Note: Colors for borders and backgrounds are defined in _tokens.scss.
                     }
                 }
             }
-            
         }
-        // &-tier-selector {
-
-        //     .footnote {
-        //         width: auto;
-        //     }
-        //     .selector-buttons {
-        //         button {
-        //             font-size: 16px;
-        //             width: 180px;
-        //         }
-    
-        //         .backdrop {
-        //             width: 180px;
-    
-        //             &.tier-benchmarking {
-        //                 left: 5px;
-        //             }
-        //             &.tier-expansion {
-        //                 left: 185px;
-        //             }
-        //             &.tier-production {
-        //                 left: 365px;
-        //             }
-        //         }
-        //     }
-        // }
         &-tier-selector {
             margin-top: 0px;
             margin-bottom: 60px;
     
             .footnote {
                 margin-bottom: 5px;
+                width: 100%;
             }
     
             .selector-buttons {
